--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+/*=spring을 통해 h2db 연결설정 */
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+
+/* jpa 설정 */
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=none
