--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-/*=spring을 통해 h2db 연결설정 */
+#spring을 통해 h2db 연결설정
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
 
-/* jpa 설정 */
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=none
+#jpa 설정
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto=none
+
+# mybatis 매핑 type을 짧게 쓰기 위한 설정
+mybatis.config-location=classpath:mybatis-config.xml
