Spring + Mybatis + H2DBMS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.password=
 
 
 # regarding jpa
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto=none
+
+# regarding mybatis
+mybatis.config-location=classpath:mybatis-config.xml 
