--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,19 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
 ### STS ###
 .apt_generated
 .classpath
@@ -13,7 +26,6 @@ build/
 .settings
 .springBeans
 .sts4-cache
-bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
@@ -35,3 +47,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Upload Folder ###
+upload/**
