--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	all {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+	}
 }
 
 repositories {
@@ -20,6 +23,11 @@ repositories {
 }
 
 dependencies {
+//	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+//	implementation 'javax.sevlet:jstl:1.2'
+
+	// log4j2
+	implementation 'org.apache.logging.log4j:log4j-core:2.13.1'
 	implementation 'junit:junit:4.12'
 	runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -32,7 +40,6 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
 test {
 	useJUnitPlatform()
 }
