--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,17 @@
-
 spring:
   servlet:
     multipart:
-      max-file-size: 500MB
-      max-request-size: 500MB
+      max-file-size: 100000000000
+      max-request-size: 100000000000
+  thymeleaf:
+    excluded-view-names: jsp/*
+    enabled: true
+    encoding: utf-8
+    check-template-location: true
+    prefix: WEB-INF/templates/
+    suffix: .html
+    cache: false
+    templateMode: HTML5
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:tcp://localhost/~/test
@@ -16,14 +24,3 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-  mvc:
-    static-path-pattern: /static/**
-  resources:
-    static-locations:
-      - classpath:/static/
-    cache:
-      period: 0
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
