--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,10 @@ spring:
     username: sa
     password:
   jpa:
+    generate-ddl: true
+    open-in-view: false
     hibernate:
-#      ddl-auto: create
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
