--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,5 +22,5 @@ spring:
 #      ddl-auto: create
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
+#        show_sql: true
+#        format_sql: true
