--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ repositories {
 }
 
 dependencies {
-//	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-//	implementation 'javax.sevlet:jstl:1.2'
+	// jackson (JSON)
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
 
 	// log4j2
 	implementation 'org.apache.logging.log4j:log4j-core:2.13.1'
